fix: improve map logo positioning and click behavior with z-index adjustments

--- a/css/main.scss
+++ b/css/main.scss
@@ -41,11 +41,16 @@ body {
 }
 
 div.map-logo {
+  position: fixed; /* Changed to fixed to match the map container */
+  top: 50px;
+  left: 50px;
+  z-index: 15000;
+  pointer-events: none; /* Allow clicks to pass through to map */
+
   img {
-    top: 50px;
-    left: 50px;
-    z-index: 500;
-    position: fixed;
+    max-width: 150px; /* Control the size of your logo */
+    height: auto;
+    display: block;
   }
 }
 
